k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taafi-system
  labels:
    name: taafi-system
