k8s/valkey-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-deploy
  namespace: taafi-system
  labels:
    app: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:7.2-alpine
          ports:
            - containerPort: 6379
