k8s/core-engine-service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-engine-service
  namespace: taafi-system
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: core-engine
