k8s/valkey-service.yml
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
  namespace: taafi-system
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: valkey
