k8s/web-dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-dashboard-service
  namespace: taafi-system
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web-dashboard
